--- a/index.html
+++ b/index.html
@@ -1,174 +1,147 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Waseem's Portfolio</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./src/styles.css" />
-  </head>
 
-  <body>
-    <section class="skills-section skew">
-      <div class="unskew">
-        <h3 class="red section-title">My Skills</h3>
-        <section class="flex-container">
-          <!-- JavaScript -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/JavaScript.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">JavaScript</p>
-            </div>
-          </div>
+<head>
+  <title>Waseem's Portfolio</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./src/styles.css" />
+</head>
 
-          <!-- HTML -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/HTML.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">HTML</p>
-            </div>
-          </div>
+<body>
 
-          <!-- CSS -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/CSS.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">CSS</p>
-            </div>
-          </div>
-
-          <!-- React Native -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/React Native.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">React Native</p>
-            </div>
-          </div>
-
-          <!-- C# -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/CS.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">C#</p>
-            </div>
-          </div>
-
-          <!-- Unity -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/Unity.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">Unity</p>
-            </div>
-          </div>
-
-          <!-- C -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/C.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">C</p>
-            </div>
-          </div>
-
-          <!-- Java -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/Java.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">Java</p>
-            </div>
-          </div>
-
-          <!-- Linux -->
-          <div class="skill-card">
-            <img class="skill-card-image" src="./assets/Linux.svg" />
-            <div class="skill-card-name-holder">
-              <p class="skill-card-name">Linux</p>
-            </div>
-          </div>
-        </section>
+  <section class="landing-section skew">
+    <div class="landing-section unskew">
+      <div>
+        <img class="landing-section-image"
+          src="assets/Waseem.png">
       </div>
-    </section>
+      <div class="landing-section-content">
+        <section class="landing-section-content-header">
+          <h4 class="landing-section-hello">Hello,</h4>
+          <h4 class="landing-section-name">
+            <span>I'm</span> Waseem
+          </h4>
+        </section>
+        <p class="landing-section-description">
+          Description or summary goes here I want to be able to talk about myself a
+          little so I can tell onlookers what they should know about me
+        </p>
+        <ul class="landing-section-button-list">
+          <li>
+            <a class="landing-section-button" target="_blank" href="https://www.linkedin.com/in/waseem-alkasbutrus/">
+              <img src="assets/LinkedIn Social Button.svg">
+              LinkedIn
+            </a>
+          </li>
+          <li>
+            <a class="landing-section-button" target="_blank" href="https://github.com/Waseem-Alkasbutrus">
+              <img src="assets/GitHub Social Button Black.svg">
+              GitHub
+            </a>
+          </li>
+          <li>
+            <a class="landing-section-button">
+              <img src="assets/Document icon.svg">
+              Resume
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-    <section class="projects-section skew">
-      <div class="unskew">
-        <h3 class="black section-title">My Projects</h3>
-        <section class="flex-container">
-          <!-- Rollability -->
-          <div
-            class="project-card"
-            style="
+  <section class="skills-section skew">
+    <div class="unskew">
+      <h3 class="red section-title">My Skills</h3>
+      <section class="flex-container">
+        <!-- JavaScript -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/JavaScript.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">JavaScript</p>
+          </div>
+        </div>
+
+        <!-- HTML -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/HTML.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">HTML</p>
+          </div>
+        </div>
+
+        <!-- CSS -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/CSS.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">CSS</p>
+          </div>
+        </div>
+
+        <!-- React Native -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/React Native.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">React Native</p>
+          </div>
+        </div>
+
+        <!-- C# -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/CS.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">C#</p>
+          </div>
+        </div>
+
+        <!-- Unity -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/Unity.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">Unity</p>
+          </div>
+        </div>
+
+        <!-- C -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/C.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">C</p>
+          </div>
+        </div>
+
+        <!-- Java -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/Java.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">Java</p>
+          </div>
+        </div>
+
+        <!-- Linux -->
+        <div class="skill-card">
+          <img class="skill-card-image" src="./assets/Linux.svg" />
+          <div class="skill-card-name-holder">
+            <p class="skill-card-name">Linux</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </section>
+
+  <section class="projects-section skew">
+    <div class="unskew">
+      <h3 class="black section-title">My Projects</h3>
+      <section class="flex-container">
+        <!-- Rollability -->
+        <div class="project-card" style="
               background-image: url(https://user-images.githubusercontent.com/4723983/184786686-31298833-fa7c-4050-8ae9-c93712ee7a30.png);
-            "
-          >
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">Rollability</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      C#
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      Unity
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Entry for GMTK Game Jam 2022. Single-player, 2D plaformer made
-                  using Unity
-                </p>
-              </div>
-              <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
-                <img src="./assets/GitHub Social Button.svg" />
-              </a>
-            </div>
-          </div>
-
-          <!-- Octapoints -->
-          <div
-            class="project-card"
-            style="
-              background-image: url(https://raw.githubusercontent.com/Waseem-Alkasbutrus/Portfolio/changing-page-sections/CoverImgs/OctapointsCover.png);
-            "
-          >
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">Octapoints</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      React Native
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      JavaScript
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      C
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Decentralized, NFC, attendance-based point-awarding system
-                </p>
-              </div>
-              <a class="project-card-github" href="https://github.com/mavs-octagon/Temple">
-                <img src="./assets/GitHub Social Button.svg" />
-              </a>
-            </div>
-          </div>
-
-          <!-- Nexus Light -->
-          <div
-            class="project-card"
-            style="background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/NexusLightCover2.png?raw=true);"
-         >
-           <div class="project-card-black-area">
-             <div>
-               <div class="project-card-top-line">
-                 <h4 class="project-card-name">Nexus Light</h4>
-                 <ul class="project-card-chip-list">
+            ">
+          <div class="project-card-black-area">
+            <div>
+              <div class="project-card-top-line">
+                <h4 class="project-card-name">Rollability</h4>
+                <ul class="project-card-chip-list">
                   <li class="project-card-chip">
                     <span class="project-card-chip-cirle"></span>
                     Unity
@@ -177,59 +150,119 @@
                     <span class="project-card-chip-cirle"></span>
                     C#
                   </li>
-                 </ul>
-               </div>
-               <p class="prject-card-description">
-                Single-player, 2D platformer
-               </p>
-             </div>
-             <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
-               <img src="./assets/GitHub Social Button.svg" />
-             </a>
-           </div>
-         </div>
-
-          <!-- MavPoker -->
-          <div
-            class="project-card"
-            style="
-              background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/MavPokerCover3.png?raw=true);
-            "
-          >
-            <div class="project-card-black-area">
-              <div>
-                <div class="project-card-top-line">
-                  <h4 class="project-card-name">MavPoker</h4>
-                  <ul class="project-card-chip-list">
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      Java
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      JavaScript
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      HTML
-                    </li>
-                    <li class="project-card-chip">
-                      <span class="project-card-chip-cirle"></span>
-                      CSS
-                    </li>
-                  </ul>
-                </div>
-                <p class="prject-card-description">
-                  Web based multiplayer 5-card draw poker game
-                </p>
+                </ul>
               </div>
-              <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/MavPoker">
-                <img src="./assets/GitHub Social Button.svg" />
-              </a>
+              <p class="prject-card-description">
+                Entry for GMTK Game Jam 2022. Single-player, 2D plaformer made
+                using Unity
+              </p>
             </div>
+            <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
+              <img src="./assets/GitHub Social Button.svg" />
+            </a>
           </div>
-        </section>
-      </div>
-    </section>
-  </body>
+        </div>
+
+        <!-- Octapoints -->
+        <div class="project-card" style="
+              background-image: url(https://raw.githubusercontent.com/Waseem-Alkasbutrus/Portfolio/changing-page-sections/CoverImgs/OctapointsCover.png);
+            ">
+          <div class="project-card-black-area">
+            <div>
+              <div class="project-card-top-line">
+                <h4 class="project-card-name">Octapoints</h4>
+                <ul class="project-card-chip-list">
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    React Native
+                  </li>
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    JS
+                  </li>
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    C
+                  </li>
+                </ul>
+              </div>
+              <p class="prject-card-description">
+                Decentralized, NFC, attendance-based point-awarding system
+              </p>
+            </div>
+            <a class="project-card-github" href="https://github.com/mavs-octagon/Temple">
+              <img src="./assets/GitHub Social Button.svg" />
+            </a>
+          </div>
+        </div>
+
+        <!-- Nexus Light -->
+        <div class="project-card"
+          style="background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/NexusLightCover2.png?raw=true);">
+          <div class="project-card-black-area">
+            <div>
+              <div class="project-card-top-line">
+                <h4 class="project-card-name">Nexus Light</h4>
+                <ul class="project-card-chip-list">
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    Unity
+                  </li>
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    C#
+                  </li>
+                </ul>
+              </div>
+              <p class="prject-card-description">
+                Single-player, 2D platformer
+              </p>
+            </div>
+            <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
+              <img src="./assets/GitHub Social Button.svg" />
+            </a>
+          </div>
+        </div>
+
+        <!-- MavPoker -->
+        <div class="project-card" style="
+              background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/MavPokerCover3.png?raw=true);
+            ">
+          <div class="project-card-black-area">
+            <div>
+              <div class="project-card-top-line">
+                <h4 class="project-card-name">MavPoker</h4>
+                <ul class="project-card-chip-list">
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    Java
+                  </li>
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    JS
+                  </li>
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    HTML
+                  </li>
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    CSS
+                  </li>
+                </ul>
+              </div>
+              <p class="prject-card-description">
+                Web based multiplayer 5-card draw poker game
+              </p>
+            </div>
+            <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/MavPoker">
+              <img src="./assets/GitHub Social Button.svg" />
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
+  </section>
+</body>
+
 </html>
