--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Waseem's Portfolio</title>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./src/styles.css" />
 </head>
 
