--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <section class="skills-section skew">
     <div class="unskew">
       <h3 class="red section-title">My Skills</h3>
-      <section class="flex-container">
+      <section class="flex-container skills-container">
         <!-- JavaScript -->
         <div class="skill-card">
           <img class="skill-card-image" src="./assets/JavaScript.svg" />
@@ -134,7 +134,7 @@
   <section class="projects-section skew">
     <div class="unskew">
       <h3 class="black section-title">My Projects</h3>
-      <section class="flex-container">
+      <section class="flex-container projects-container">
         <!-- Rollability -->
         <div class="project-card" style="
               background-image: url(https://user-images.githubusercontent.com/4723983/184786686-31298833-fa7c-4050-8ae9-c93712ee7a30.png);
@@ -217,7 +217,7 @@
                 </ul>
               </div>
               <p class="prject-card-description">
-                Single-player, 2D platformer
+                Single-player, 2D speedrunning platformer 
               </p>
             </div>
             <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
