shortened Rollability description

--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                 </ul>
               </div>
               <p class="prject-card-description">
-                Entry for GMTK Game Jam 2022. Single-player, 2D plaformer made
-                using Unity
+                Entry for GMTK Game Jam 2022. Single-player, 2D plaformer
               </p>
             </div>
             <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
