Added resume and JADE project

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
           </li>
           <li>
-            <a class="landing-section-button">
+            <a class="landing-section-button" target="_blank" href="./Resume.pdf">
               <img src="assets/Document icon.svg">
               Resume
             </a>
@@ -156,7 +156,7 @@
                 Entry for GMTK Game Jam 2022. Single-player, 2D plaformer
               </p>
             </div>
-            <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
+            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
               <img src="./assets/GitHub Social Button.svg" />
             </a>
           </div>
@@ -189,7 +189,7 @@
                 Decentralized, NFC, attendance-based point-awarding system
               </p>
             </div>
-            <a class="project-card-github" href="https://github.com/mavs-octagon/Temple">
+            <a class="project-card-github" target="_blank" href="https://github.com/mavs-octagon/Temple">
               <img src="./assets/GitHub Social Button.svg" />
             </a>
           </div>
@@ -217,7 +217,7 @@
                 Single-player, 2D speedrunning platformer 
               </p>
             </div>
-            <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
+            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
               <img src="./assets/GitHub Social Button.svg" />
             </a>
           </div>
@@ -254,7 +254,32 @@
                 Web based multiplayer 5-card draw poker game
               </p>
             </div>
-            <a class="project-card-github" href="https://github.com/Waseem-Alkasbutrus/MavPoker">
+            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/MavPoker">
+              <img src="./assets/GitHub Social Button.svg" />
+            </a>
+          </div>
+        </div>
+
+        <!-- JADE -->
+        <div class="project-card" style="
+              background-image: url(https://waseem-alkasbutrus.github.io/Portfolio/CoverImgs/JADECover3.png);
+            ">
+          <div class="project-card-black-area">
+            <div>
+              <div class="project-card-top-line">
+                <h4 class="project-card-name">JADE</h4>
+                <ul class="project-card-chip-list">
+                  <li class="project-card-chip">
+                    <span class="project-card-chip-cirle"></span>
+                    Java
+                  </li>
+                </ul>
+              </div>
+              <p class="prject-card-description">
+                Java and Donut Express - Desktop coffeeshop logistics management tool
+              </p>
+            </div>
+            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/JADE">
               <img src="./assets/GitHub Social Button.svg" />
             </a>
           </div>
