Removed Github logo from project card on mobile. Made entire card link to repo

--- a/index.html
+++ b/index.html
@@ -134,156 +134,166 @@
       <h3 class="black section-title">My Projects</h3>
       <section class="flex-container projects-container">
         <!-- Rollability -->
-        <div class="project-card" style="
-              background-image: url(https://user-images.githubusercontent.com/4723983/184786686-31298833-fa7c-4050-8ae9-c93712ee7a30.png);
-            ">
-          <div class="project-card-black-area">
-            <div>
-              <div class="project-card-top-line">
-                <h4 class="project-card-name">Rollability</h4>
-                <ul class="project-card-chip-list">
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    Unity
-                  </li>
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    C#
-                  </li>
-                </ul>
+        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
+          <div class="project-card" style="
+                background-image: url(https://user-images.githubusercontent.com/4723983/184786686-31298833-fa7c-4050-8ae9-c93712ee7a30.png);
+              ">
+            <div class="project-card-black-area">
+              <div>
+                <div class="project-card-top-line">
+                  <h4 class="project-card-name">Rollability</h4>
+                  <ul class="project-card-chip-list">
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      Unity
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      C#
+                    </li>
+                  </ul>
+                </div>
+                <p class="prject-card-description">
+                  Entry for GMTK Game Jam 2022. Single-player, 2D plaformer
+                </p>
               </div>
-              <p class="prject-card-description">
-                Entry for GMTK Game Jam 2022. Single-player, 2D plaformer
-              </p>
+              <section class="project-card-github">
+                <img src="./assets/GitHub Social Button.svg" />
+              </section>
             </div>
-            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
-              <img src="./assets/GitHub Social Button.svg" />
-            </a>
           </div>
-        </div>
+        </a>
 
         <!-- Octapoints -->
-        <div class="project-card" style="
-              background-image: url(https://raw.githubusercontent.com/Waseem-Alkasbutrus/Portfolio/changing-page-sections/CoverImgs/OctapointsCover.png);
-            ">
-          <div class="project-card-black-area">
-            <div>
-              <div class="project-card-top-line">
-                <h4 class="project-card-name">Octapoints</h4>
-                <ul class="project-card-chip-list">
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    React Native
-                  </li>
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    JS
-                  </li>
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    C
-                  </li>
-                </ul>
+        <a target="_blank" href="https://github.com/mavs-octagon/Temple">
+          <div class="project-card" style="
+                background-image: url(https://raw.githubusercontent.com/Waseem-Alkasbutrus/Portfolio/changing-page-sections/CoverImgs/OctapointsCover.png);
+              ">
+            <div class="project-card-black-area">
+              <div>
+                <div class="project-card-top-line">
+                  <h4 class="project-card-name">Octapoints</h4>
+                  <ul class="project-card-chip-list">
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      React Native
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      JS
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      C
+                    </li>
+                  </ul>
+                </div>
+                <p class="prject-card-description">
+                  Decentralized, NFC, attendance-based point-awarding system
+                </p>
               </div>
-              <p class="prject-card-description">
-                Decentralized, NFC, attendance-based point-awarding system
-              </p>
+              <section class="project-card-github">
+                <img src="./assets/GitHub Social Button.svg" />
+              </section>
             </div>
-            <a class="project-card-github" target="_blank" href="https://github.com/mavs-octagon/Temple">
-              <img src="./assets/GitHub Social Button.svg" />
-            </a>
           </div>
-        </div>
+        </a>
 
         <!-- Nexus Light -->
-        <div class="project-card"
-          style="background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/NexusLightCover2.png?raw=true);">
-          <div class="project-card-black-area">
-            <div>
-              <div class="project-card-top-line">
-                <h4 class="project-card-name">Nexus Light</h4>
-                <ul class="project-card-chip-list">
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    Unity
-                  </li>
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    C#
-                  </li>
-                </ul>
+        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
+          <div class="project-card"
+            style="background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/NexusLightCover2.png?raw=true);">
+            <div class="project-card-black-area">
+              <div>
+                <div class="project-card-top-line">
+                  <h4 class="project-card-name">Nexus Light</h4>
+                  <ul class="project-card-chip-list">
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      Unity
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      C#
+                    </li>
+                  </ul>
+                </div>
+                <p class="prject-card-description">
+                  Single-player, 2D speedrunning platformer 
+                </p>
               </div>
-              <p class="prject-card-description">
-                Single-player, 2D speedrunning platformer 
-              </p>
+              <section class="project-card-github">
+                <img src="./assets/GitHub Social Button.svg" />
+              </section>
             </div>
-            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
-              <img src="./assets/GitHub Social Button.svg" />
-            </a>
           </div>
-        </div>
+        </a>
 
         <!-- MavPoker -->
-        <div class="project-card" style="
-              background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/MavPokerCover3.png?raw=true);
-            ">
-          <div class="project-card-black-area">
-            <div>
-              <div class="project-card-top-line">
-                <h4 class="project-card-name">MavPoker</h4>
-                <ul class="project-card-chip-list">
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    Java
-                  </li>
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    JS
-                  </li>
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    HTML
-                  </li>
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    CSS
-                  </li>
-                </ul>
+        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/WebPoker">
+          <div class="project-card" style="
+                background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/MavPokerCover3.png?raw=true);
+              ">
+            <div class="project-card-black-area">
+              <div>
+                <div class="project-card-top-line">
+                  <h4 class="project-card-name">MavPoker</h4>
+                  <ul class="project-card-chip-list">
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      Java
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      JS
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      HTML
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      CSS
+                    </li>
+                  </ul>
+                </div>
+                <p class="prject-card-description">
+                  Web based multiplayer 5-card draw poker game
+                </p>
               </div>
-              <p class="prject-card-description">
-                Web based multiplayer 5-card draw poker game
-              </p>
+              <section class="project-card-github">
+                <img src="./assets/GitHub Social Button.svg" />
+              </section>
             </div>
-            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/MavPoker">
-              <img src="./assets/GitHub Social Button.svg" />
-            </a>
           </div>
-        </div>
+        </a>
 
         <!-- JADE -->
-        <div class="project-card" style="
-              background-image: url(https://waseem-alkasbutrus.github.io/Portfolio/CoverImgs/JADECover3.png);
-            ">
-          <div class="project-card-black-area">
-            <div>
-              <div class="project-card-top-line">
-                <h4 class="project-card-name">JADE</h4>
-                <ul class="project-card-chip-list">
-                  <li class="project-card-chip">
-                    <span class="project-card-chip-cirle"></span>
-                    Java
-                  </li>
-                </ul>
+        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/JADE">
+          <div class="project-card" style="
+                background-image: url(https://waseem-alkasbutrus.github.io/Portfolio/CoverImgs/JADECover3.png);
+              ">
+            <div class="project-card-black-area">
+              <div>
+                <div class="project-card-top-line">
+                  <h4 class="project-card-name">JADE</h4>
+                  <ul class="project-card-chip-list">
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      Java
+                    </li>
+                  </ul>
+                </div>
+                <p class="prject-card-description">
+                  Java and Donut Express - Desktop coffeeshop logistics management tool
+                </p>
               </div>
-              <p class="prject-card-description">
-                Java and Donut Express - Desktop coffeeshop logistics management tool
-              </p>
+              <section class="project-card-github">
+                <img src="./assets/GitHub Social Button.svg" />
+              </section>
             </div>
-            <a class="project-card-github" target="_blank" href="https://github.com/Waseem-Alkasbutrus/JADE">
-              <img src="./assets/GitHub Social Button.svg" />
-            </a>
           </div>
-        </div>
+        </a>
       </section>
     </div>
   </section>
