Updated summary / description

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           </h4>
         </section>
         <p class="landing-section-description">
-          Description or summary goes here I want to be able to talk about myself a
-          little so I can tell onlookers what they should know about me
+          Junior computer science student in the University of Texas at Arlington with an interest in design, game development, and frontend development.
         </p>
         <ul class="landing-section-button-list">
           <li>
