Added CloudCast and started using local images for projects

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <!-- Rollability -->
         <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
           <div class="project-card" style="
-                background-image: url(https://user-images.githubusercontent.com/4723983/184786686-31298833-fa7c-4050-8ae9-c93712ee7a30.png);
+                background-image: url('./assets/project-images/RollAbility.png');
               ">
             <div class="project-card-black-area">
               <div>
@@ -164,10 +164,45 @@
           </div>
         </a>
 
+        <!-- CloudCast -->
+        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/CloudCast">
+          <div class="project-card" style="
+                background-image: url('./assets/project-images/CloudCast.png');
+              ">
+            <div class="project-card-black-area">
+              <div>
+                <div class="project-card-top-line">
+                  <h4 class="project-card-name">CloudCast</h4>
+                  <ul class="project-card-chip-list">
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      React Native
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      JS
+                    </li>
+                    <li class="project-card-chip">
+                      <span class="project-card-chip-cirle"></span>
+                      Expo
+                    </li>
+                  </ul>
+                </div>
+                <p class="prject-card-description">
+                  Real-time global weather app
+                </p>
+              </div>
+              <section class="project-card-github">
+                <img src="./assets/GitHub Social Button.svg" />
+              </section>
+            </div>
+          </div>
+        </a>
+
         <!-- Octapoints -->
         <a target="_blank" href="https://github.com/mavs-octagon/Temple">
           <div class="project-card" style="
-                background-image: url(https://raw.githubusercontent.com/Waseem-Alkasbutrus/Portfolio/changing-page-sections/CoverImgs/OctapointsCover.png);
+                background-image: url('./assets/project-images/Octapoints.png');
               ">
             <div class="project-card-black-area">
               <div>
@@ -202,7 +237,7 @@
         <!-- Nexus Light -->
         <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
           <div class="project-card"
-            style="background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/NexusLightCover2.png?raw=true);">
+            style="background-image: url('./assets/project-images/NexusLight.png');">
             <div class="project-card-black-area">
               <div>
                 <div class="project-card-top-line">
@@ -232,7 +267,7 @@
         <!-- MavPoker -->
         <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/WebPoker">
           <div class="project-card" style="
-                background-image: url(https://github.com/Waseem-Alkasbutrus/Portfolio/blob/changing-page-sections/CoverImgs/MavPokerCover3.png?raw=true);
+                background-image: url('./assets/project-images/MavPoker.png');
               ">
             <div class="project-card-black-area">
               <div>
@@ -271,7 +306,7 @@
         <!-- JADE -->
         <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/JADE">
           <div class="project-card" style="
-                background-image: url(https://waseem-alkasbutrus.github.io/Portfolio/CoverImgs/JADECover3.png);
+                background-image: url('./assets/project-images/JADE.png');
               ">
             <div class="project-card-black-area">
               <div>
