Fixed project card width inconsistencies on mobile

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <h3 class="black section-title">My Projects</h3>
       <section class="flex-container projects-container">
         <!-- Rollability -->
-        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
+        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/GMTK-Game-Jam-2022">
           <div class="project-card" style="
                 background-image: url('./assets/project-images/RollAbility.png');
               ">
@@ -165,7 +165,7 @@
         </a>
 
         <!-- CloudCast -->
-        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/CloudCast">
+        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/CloudCast">
           <div class="project-card" style="
                 background-image: url('./assets/project-images/CloudCast.png');
               ">
@@ -200,7 +200,7 @@
         </a>
 
         <!-- Octapoints -->
-        <a target="_blank" href="https://github.com/mavs-octagon/Temple">
+        <a class="project-link-container" target="_blank" href="https://github.com/mavs-octagon/Temple">
           <div class="project-card" style="
                 background-image: url('./assets/project-images/Octapoints.png');
               ">
@@ -235,7 +235,7 @@
         </a>
 
         <!-- Nexus Light -->
-        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
+        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/Nexus_Light">
           <div class="project-card"
             style="background-image: url('./assets/project-images/NexusLight.png');">
             <div class="project-card-black-area">
@@ -265,7 +265,7 @@
         </a>
 
         <!-- MavPoker -->
-        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/WebPoker">
+        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/WebPoker">
           <div class="project-card" style="
                 background-image: url('./assets/project-images/MavPoker.png');
               ">
@@ -304,7 +304,7 @@
         </a>
 
         <!-- JADE -->
-        <a target="_blank" href="https://github.com/Waseem-Alkasbutrus/JADE">
+        <a class="project-link-container" target="_blank" href="https://github.com/Waseem-Alkasbutrus/JADE">
           <div class="project-card" style="
                 background-image: url('./assets/project-images/JADE.png');
               ">
